# screenblocker

./: .gitignore  README.md  mockup.html  package.json
docs/superpowers/plans/: 2026-07-19-screenblocker.md
docs/superpowers/specs/: 2026-07-19-screenblocker-design.md
src/: dashboard.js  index.html  overlay.html  overlay.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  meeting.rs  messages.rs  store.rs  timer.rs  tray_icon.rs
